--- a/premiers_project/Premier_analysis.ipynb
+++ b/premiers_project/Premier_analysis.ipynb
@@ -4,6 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Project Overview:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*This project originated from the need to manipulate and analyze data. Opting to steer clear of commonplace, pre-existing datasets, I chose to construct my dataset using a Python program and the Requests library. The data was sourced from Kinopoisk, and subsequent to retrieval, it was organized into five distinct tables. Each table encapsulates specific information about a film, facilitating convenient data management with each table responsible for its designated parameters.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Project Objective:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*The overarching aim of this project is to discern relationships and correlations among the various parameters associated with each film. By conducting a thorough analysis, the project seeks to identify potential areas of growth and uncover insights that can contribute to a more comprehensive understanding of the dataset.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Importing necessary libraries.*"
    ]
   },
@@ -3310,27 +3338,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*The higher the age category, the longer the average film duration.*\n",
+    "*1. The higher the age category, the longer the average film duration.*\n",
     "\n",
-    "*The longer the duration, the higher the budget.*\n",
+    "*2. The longer the duration, the higher the budget.*\n",
     "\n",
-    "*The higher the rating, the longer the duration.*\n",
+    "*3. The higher the rating, the longer the duration.*\n",
     "\n",
-    "*Distributors prefer films with higher age categories.*\n",
+    "*4. Distributors prefer films with higher age categories.*\n",
     "\n",
-    "*On average, ratings are higher for lower age categories.*\n",
+    "*5. On average, ratings are higher for lower age categories.*\n",
     "\n",
-    "*The higher the budget, the higher the average rating.*\n",
+    "*6. The higher the budget, the higher the average rating.*\n",
     "\n",
-    "*It's fascinating that the fantasy genre doesn't even make it to the top 10 in budget distribution.*\n",
+    "*7. It's fascinating that the fantasy genre doesn't even make it to the top 10 in budget distribution.*\n",
     "\n",
-    "*It was also interesting to note that top-budget distributors didn't make it to the top in terms of ratings.*\n",
+    "*8. It was also interesting to note that top-budget distributors didn't make it to the top in terms of ratings.*\n",
     "\n",
-    "*Additionally, it's intriguing that distributors predominantly favor genres such as drama, comedy, thriller, and slightly less so, action.*\n",
+    "*9. Additionally, it's intriguing that distributors predominantly favor genres such as drama, comedy, thriller, and slightly less so, action.*\n",
     "\n",
-    "*Genres like war, documentary, crime, and biography have the highest ratings.*\n",
+    "*10. Genres like war, documentary, crime, and biography have the highest ratings.*\n",
     "\n",
-    "*The highest number of released films is concentrated in the winter period, with a peak in comedy and drama genres in November.*"
+    "*11. The highest number of released films is concentrated in the winter period, with a peak in comedy and drama genres in November.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Have I found points of growth?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Optimizing Genre Budget Allocation:**\n",
+    "\n",
+    "*Attention to budget distribution across various genres can serve as a foundation for optimizing budget planning. Focusing on less competitive genres with high rating potential may lead to increased expenditure efficiency and overall profit growth.*\n",
+    "\n",
+    "**Seasonal Promotions and Advertising Campaigns:**\n",
+    "\n",
+    "*Considering the concentration of film releases during the winter period, a strategy could involve conducting seasonal promotions and advertising campaigns leading up to this season. This may stimulate viewer interest, increase viewership, and consequently boost box office revenues.*"
    ]
   }
  ],
